Migrate to Java 17
Fixes https://github.com/eclipse-cbi/p2repo-analyzers/issues/28